Fix scrolling: remove min-width fit-content to allow overflow

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -24,7 +24,6 @@
 }
 .work-flex {
   width: 100%;
-  min-width: fit-content;
   display: flex;
   height: auto;
   margin-left: -80px;
